# saver_backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  README.ru.md  TEST.md  Taskfile.yml  alembic.ini  docker-compose.yml  pyproject.toml  renovate.json
.github/workflows/: deploy.yml  tests.yml  tolgee_push.yml
deploy/: docker-compose.dev.yml
locales/: messages.pot
locales/en/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: messages.po
nginx-configs/: saver.conf
saver_backend/: __init__.py  __main__.py  gunicorn_runner.py  log.py  settings.py  tkq.py
saver_backend/db/: base.py  lifespan.py  utils.py
saver_backend/db/dao/: base_dao.py  cache_dao.py  history_dao.py  user_dao.py  video_cache_dao.py
saver_backend/db/migrations/: env.py
saver_backend/db/migrations/versions/: 2025-10-05-12-10_569473b349c6.py  2025-10-23-07-01_ca43dd3fe1ff.py  2025-10-23-14-06_19b445ddc1a7.py  2025-11-07-12-46_0875214f29a6.py  2025-11-08-13-26_5b6bf21e7dc6.py
saver_backend/db/models/: __init__.py  base_model.py  cache_model.py  history_model.py  user_model.py  video_cache_model.py
saver_backend/entities/: enums.py  mappers.py  resolution.py  user.py
saver_backend/services/: __init__.py  consts.py  language_resolver.py
saver_backend/services/cleanup/: clear_old.py
saver_backend/services/downloaders/: adult_ydl_source.py  base_source.py  dropbox_source.py  dzen_ydl.py  exceptions.py  facebook_ydl_source.py  google_drive_source.py  instagram_api_source.py  instagram_cobalt_source.py  instagram_indown_source.py  instagram_instaloader_source.py  instagram_ydl_source.py  kinovod_ydl_source.py  m3u8_ydl_source.py  ok_ydl_source.py  pinterest_ydl_source.py  rclone_source.py  reddit_ydl_source.py  resolver.py  rutube_ydl_source.py  schema.py  tiktok_api_source.py  tiktok_ydl_source.py  vk_api_source.py  vk_clips_ydl_source.py  vk_video_ydl_source.py  vk_wall_parser.py  vk_ydl_source.py  x_ydl_source.py  yandex_disk_source.py  yandex_music_ydl.py  yandex_ymdantic.py  ydl_source.py  youtube_shorts_ydl_source.py  youtube_video_ydl_source.py
saver_backend/services/downloaders/schemes/: KinovodSchema.py
saver_backend/services/i18n/: __init__.py  starlette.py  taskiq.py  utils.py
saver_backend/services/redis/: lifespan.py
saver_backend/services/telegram/: bot_controller.py  daily_report_service.py  decorators.py  dependency.py  exceptions.py  lifespan.py  utils.py  web_app.py
saver_backend/task_manager/: dependencies.py  events.py  state.py  tasks.py
saver_backend/telegram_bot/filters/: admin.py  source.py  subscribe.py
saver_backend/telegram_bot/handlers/: __init__.py  download.py  exceptions.py  inline.py  start.py  stats.py  subscribe.py  vk.py
saver_backend/telegram_bot/keyboards/: callback.py  inline.py  videotheatre.py
saver_backend/telegram_bot/middlewares/: bot_provider.py  controller_provider.py  dao_provider.py  database.py  service_provider.py  user.py
saver_backend/web/: __init__.py  application.py  exceptions.py  lifespan.py
saver_backend/web/api/: __init__.py  router.py
saver_backend/web/api/monitoring/: __init__.py
saver_backend/web/webhook/: __init__.py  views.py
scripts/: clear_old.py  compile_po.sh  convert_cookies_to_cobalt.py  create_instagram_session.py  entrypoint_chrome.sh  fix_po.sh  patch_yt_dlp.py  start_backend.sh  start_taskiq_scheduler.sh  start_taskiq_worker.sh
tests/: __init__.py  conftest.py
