[project]
name = "saver_backend"
version = "0.1.0"
description = "Telegram bot backend for downloading media from social platforms"
requires-python = ">=3.14,<4.0"
authors = []
maintainers = []
readme = "README.md"
dependencies = [
  "fastapi>=0.121.0,<1",
  "uvicorn[standard]>=0.41.0,<1",
  "gunicorn>=25.0.0,<26",
  "pydantic>=2.11.0,<3",
  "pydantic-settings>=2.11.0,<3",
  "yarl>=1.18.3,<2",
  "SQLAlchemy[asyncio]>=2.0.0,<3",
  "alembic>=1.17.0,<2",
  "asyncpg>=0.31.0,<1",
  "redis[hiredis]>=7.0.0,<8",
  "httptools>=0.7.0,<1",
  "pymongo>=4.0.0,<5",
  "sentry-sdk>=2.0.0,<3",
  "loguru>=0.7.3,<1",
  "taskiq[reload]>=0.12.0,<1",
  "taskiq-fastapi>=0.0.0,<1",
  "taskiq-redis>=1.0.0,<2",
  "pyzmq>=27.1.0,<28",
  "aiogram>=3.22.0,<4",
  "babel>=2.17.0,<3",
  "instagrapi>=2.2.1,<3",
  "instaloader>=4.15.0,<5",
  "ffmpeg-python>=0.2.0,<1",
  "yt-dlp>=2026.3.17,<2027",
  "bgutil-ytdlp-pot-provider>=1.2.2,<2",
  "pycountry>=26.0.0,<27",
  "emoji-country-flag>=2.1.0,<3",
  "httpx[socks]>=0.27.0,<1",
  "vkbottle>=4.6.2",
  "playwright>=1.58.0,<2",
  "ymdantic>=0.2.3,<1",
  "aiohttp-socks>=0.11.0,<1",
  "slippers-proxy>=0.3.0,<1",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0,<10",
  "ruff>=0.7.0,<1",
  "mypy>=1.10.1,<2",
  "pre-commit>=3.7.1,<5",
  "pytest-cov>=5.0.0,<8",
  "anyio>=4.0.0,<5",
  "pytest-env>=1.1.3,<2",
  "fakeredis>=2.23.3,<3",
  "ty>=0.0.34",
]

[tool.uv]
default-groups = ["dev"]
package = false

[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true

# Remove this and add `types-redis`
# when the issue https://github.com/python/typeshed/issues/8242 is resolved.
[[tool.mypy.overrides]]
module = [
    'redis.asyncio'
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
env = [
    "SAVER_BACKEND_ENVIRONMENT=pytest",
    "SAVER_BACKEND_DB_BASE=saver_backend_test",
    "SAVER_BACKEND_SENTRY_DSN=",
]

[tool.ruff]
line-length = 88
exclude = [
    "saver_backend/db/migrations",
    ".venv/",
]

[tool.ruff.lint]
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
select = [
    "E",   # Error
    "F",   # Pyflakes
    "W",   # Pycodestyle
    "C90", # McCabe complexity
    "I",   # Isort
    "N",   # pep8-naming
    "D",   # Pydocstyle
    "ANN", # Pytype annotations
    "S",   # Bandit
    "B",   # Bugbear
    "C4",  # Comprehensions
    "ISC", # Implicit string concat
    "PIE", # Unnecessary code
    "T20", # Catch prints
    "PYI", # validate pyi files
    "Q",   # Checks for quotes
    "RSE", # Checks raise statements
    "RET", # Checks return statements
    "SLF", # Self checks
    "SIM", # Simplificator
    "PTH", # Pathlib checks
    "ERA", # Checks for commented out code
    "PL",  # PyLint checks
    "RUF", # Specific to Ruff checks
]
ignore = [
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "B008",    # Do not perform function calls in argument defaults
    "D211",    # No blank lines allowed before class docstring
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line should be in imperative mood
    "D104",    # Missing docstring in public package
    "D100",    # Missing docstring in public module
    "D202",    # No blank lines allowed after function docstring
    "ANN401",  # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106",    # Missing docstring in public nested class
    "S105",    # Possible hardcoded password (settings defaults are placeholders)
    "PLC0415", # `import` should be at top-level (we use lazy/local imports)
]
mccabe = { max-complexity = 10 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101", # Use of assert detected
]
"*/exceptions.py" = ["D101"]
"saver_backend/services/downloaders/resolver.py" = ["D102"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]
